Update Day 7 - 28 Aug 2023.md

--- a/Day 7 - 28 Aug 2023.md
+++ b/Day 7 - 28 Aug 2023.md
@@ -1,2 +1,16 @@
 
 ### Final Foundational Bootcamp Case Study Assessment
+
+**Problem Statement**: Implementing a Seamless CI/CD Workflow for a Spring Boot Application using Azure Boards, Azure, Git, Maven, Docker, Github, Github Actions.
+
+- Project Management Setup
+- GitHub Repository and Feature Branching
+- Azure VM Configuration
+- Maven-Based Build Process
+- Prometheus Monitoring Integration
+- Docker Containerization
+- Azure Web App Configuration
+- Pull Request Collaboration
+- GitHub Actions Workflow Implementation
+- Local Testing of Azure Web App
+- Azure Boards Task and Sprint Closure
