Update Day 33 - 29 Sep 2023.md

--- a/Day 33 - 29 Sep 2023.md
+++ b/Day 33 - 29 Sep 2023.md
@@ -1,2 +1,12 @@
 # Devops
 
+- Azure Devops Account
+- Creating Organisation
+- Creating project
+- Creating Epic, Features, User Stories, Tasks
+- Creating a sprint board
+- Creating a git repo
+- Adding some data files to the main branch and Committing them.
+- Creating a feature branch form the main branch and updating the filed.
+- Committing the files and making a pull request to the main branch.
+- After the acceptance of pull request, merging it with main branch.
